# Simple-NLP-Application-using-Streamlit

./: .gitignore  README.md  app.py  pyproject.toml
