[project]
name = "project-1-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deep-translator>=1.11.4",
    "langcodes>=3.5.1",
    "langdetect>=1.0.9",
    "nltk>=3.9.4",
    "pyspellchecker>=0.9.0",
    "streamlit>=1.58.0",
]
